[package]
name = "serde_json_traversal"
version = "0.2.0"
authors = ["Cecile Tonglet <cecile.tonglet@cecton.com>"]
edition = "2018"
description = "A macro that creates the boilerplate to traverse JSON (js/ts style)"
repository = "https://github.com/cecton/serde_json_traversal"
homepage = "https://github.com/cecton/serde_json_traversal"
readme = "README.md"
license = "MIT OR Apache-2.0"

[dev-dependencies]
serde_json = "1.0"
trybuild = "1.0"
